--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/d82b023040.js" crossorigin="anonymous"></script>
+    <title>Search Widget</title>
 </head>
 
 <body>
+    <div class="search">
+        <input type="search" class="input" placeholder="Search...">
+        <button class="btn"><i class="fas fa-search"></i></button>
+    </div>
     <script src="script.js"></script>
 </body>
 
