--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="search">
+    <div class="search active">
         <input type="search" class="input" placeholder="Search...">
         <button class="btn"><i class="fas fa-search"></i></button>
     </div>
